// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> snapshots renders a group of terms 1`] = `
.c8 {
  position: absolute;
  right: 10px;
  visibility: hidden;
  color: hsl(13,100%,40%);
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  margin-top: 8px;
  margin-top: 0px;
}

.c7 input {
  padding-right: 12px;
  padding-left: 12px;
  width: 100%;
  line-height: 36px;
  box-shadow: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  border-radius: 2px;
  height: 36px;
  box-sizing: border-box;
}

.c7 input::-webkit-input-placeholder {
  color: hsl(0,0%,45%);
}

.c7 input::-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c7 input:-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c7 input:-ms-input-placeholder {
  color: hsl(0,0%,45%);
}

.c7 input::-webkit-input-placeholder {
  opacity: 1;
}

.c7 input::-moz-placeholder {
  opacity: 1;
}

.c7 input:-moz-placeholder {
  opacity: 1;
}

.c7 input:-ms-input-placeholder {
  opacity: 1;
}

.c7 input:disabled {
  background-color: hsl(0,0%,96%);
}

.c7 input:disabled::-webkit-input-placeholder {
  opacity: 0.5;
}

.c7 input:disabled::-moz-placeholder {
  opacity: 0.5;
}

.c7 input:disabled:-moz-placeholder {
  opacity: 0.5;
}

.c7 input:disabled:-ms-input-placeholder {
  opacity: 0.5;
}

.c9 {
  display: none;
  padding-left: 8px;
  margin-top: 8px;
  font-size: 14px;
  text-align: left;
  color: inherit;
  visibility: hidden;
}

.c6 {
  padding: 8px;
}

.c4 {
  background-color: hsl(191,100%,80%);
  border-radius: 2px;
  margin: 4px 0 4px 2px;
  padding: 6px;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 i {
  padding-left: 4px;
  cursor: pointer;
}

.c3 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  padding: 0 6px 0 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  width: 100%;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(240,20%,90%);
  border-radius: 2px;
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 div,
.c0 input {
  border: 0;
}

.c0 .c5,
.c0 .c10 {
  padding: 0;
  margin: 0;
}

.c0 .c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  line-height: 36px;
  border-left: 1px solid hsl(0,0%,80%);
}

.c0 .c10 .dropdown-popover {
  width: auto;
}

.c0 .c5 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  width: 100%;
}

.c0 .c5 input {
  padding: 0 8px;
  width: 100%;
}

.c0 .c5 input:focus {
  outline: none;
}

<div
  className="c0"
>
  <i
    className="fa fa-search c1"
    disabled={false}
  />
  <div
    className="c2"
  >
    <ul
      className="c3"
      disabled={false}
    >
      <li
        className="c4 search-term"
      >
        <div
          className="search-term-text"
        >
          deployments
        </div>
        <i
          className="fa fa-times remove-term"
          onClick={[Function]}
        />
      </li>
      <li
        className="c4 search-term"
      >
        <div
          className="search-term-text"
        >
          default
        </div>
        <i
          className="fa fa-times remove-term"
          onClick={[Function]}
        />
      </li>
    </ul>
    <div
      className="c5 c6"
    >
      
      <div
        className="c7"
      >
        <input
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder={null}
          value=""
        />
        <i
          className="fa fa-times-circle c8"
        />
      </div>
      <span
        className="c9"
      >
        
      </span>
    </div>
  </div>
</div>
`;

exports[`<Search /> snapshots renders a search string 1`] = `
.c7 {
  position: absolute;
  right: 10px;
  visibility: hidden;
  color: hsl(13,100%,40%);
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  margin-top: 8px;
  margin-top: 0px;
}

.c6 input {
  padding-right: 12px;
  padding-left: 12px;
  width: 100%;
  line-height: 36px;
  box-shadow: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  border-radius: 2px;
  height: 36px;
  box-sizing: border-box;
}

.c6 input::-webkit-input-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input::-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input:-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input:-ms-input-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input::-webkit-input-placeholder {
  opacity: 1;
}

.c6 input::-moz-placeholder {
  opacity: 1;
}

.c6 input:-moz-placeholder {
  opacity: 1;
}

.c6 input:-ms-input-placeholder {
  opacity: 1;
}

.c6 input:disabled {
  background-color: hsl(0,0%,96%);
}

.c6 input:disabled::-webkit-input-placeholder {
  opacity: 0.5;
}

.c6 input:disabled::-moz-placeholder {
  opacity: 0.5;
}

.c6 input:disabled:-moz-placeholder {
  opacity: 0.5;
}

.c6 input:disabled:-ms-input-placeholder {
  opacity: 0.5;
}

.c8 {
  display: none;
  padding-left: 8px;
  margin-top: 8px;
  font-size: 14px;
  text-align: left;
  color: inherit;
  visibility: hidden;
}

.c5 {
  padding: 8px;
}

.c3 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  padding: 0 6px 0 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  width: 100%;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(240,20%,90%);
  border-radius: 2px;
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 div,
.c0 input {
  border: 0;
}

.c0 .c4,
.c0 .c9 {
  padding: 0;
  margin: 0;
}

.c0 .c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  line-height: 36px;
  border-left: 1px solid hsl(0,0%,80%);
}

.c0 .c9 .dropdown-popover {
  width: auto;
}

.c0 .c4 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  width: 100%;
}

.c0 .c4 input {
  padding: 0 8px;
  width: 100%;
}

.c0 .c4 input:focus {
  outline: none;
}

<div
  className="c0"
>
  <i
    className="fa fa-search c1"
    disabled={false}
  />
  <div
    className="c2"
  >
    <ul
      className="c3"
      disabled={false}
    />
    <div
      className="c4 c5"
    >
      
      <div
        className="c6"
      >
        <input
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="search"
          value="ui-server"
        />
        <i
          className="fa fa-times-circle c7"
        />
      </div>
      <span
        className="c8"
      >
        
      </span>
    </div>
  </div>
</div>
`;

exports[`<Search /> snapshots renders empty 1`] = `
.c7 {
  position: absolute;
  right: 10px;
  visibility: hidden;
  color: hsl(13,100%,40%);
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  margin-top: 8px;
  margin-top: 0px;
}

.c6 input {
  padding-right: 12px;
  padding-left: 12px;
  width: 100%;
  line-height: 36px;
  box-shadow: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  border-radius: 2px;
  height: 36px;
  box-sizing: border-box;
}

.c6 input::-webkit-input-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input::-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input:-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input:-ms-input-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input::-webkit-input-placeholder {
  opacity: 1;
}

.c6 input::-moz-placeholder {
  opacity: 1;
}

.c6 input:-moz-placeholder {
  opacity: 1;
}

.c6 input:-ms-input-placeholder {
  opacity: 1;
}

.c6 input:disabled {
  background-color: hsl(0,0%,96%);
}

.c6 input:disabled::-webkit-input-placeholder {
  opacity: 0.5;
}

.c6 input:disabled::-moz-placeholder {
  opacity: 0.5;
}

.c6 input:disabled:-moz-placeholder {
  opacity: 0.5;
}

.c6 input:disabled:-ms-input-placeholder {
  opacity: 0.5;
}

.c8 {
  display: none;
  padding-left: 8px;
  margin-top: 8px;
  font-size: 14px;
  text-align: left;
  color: inherit;
  visibility: hidden;
}

.c5 {
  padding: 8px;
}

.c3 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  padding: 0 6px 0 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  width: 100%;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(240,20%,90%);
  border-radius: 2px;
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 div,
.c0 input {
  border: 0;
}

.c0 .c4,
.c0 .c9 {
  padding: 0;
  margin: 0;
}

.c0 .c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  line-height: 36px;
  border-left: 1px solid hsl(0,0%,80%);
}

.c0 .c9 .dropdown-popover {
  width: auto;
}

.c0 .c4 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  width: 100%;
}

.c0 .c4 input {
  padding: 0 8px;
  width: 100%;
}

.c0 .c4 input:focus {
  outline: none;
}

<div
  className="c0"
>
  <i
    className="fa fa-search c1"
    disabled={false}
  />
  <div
    className="c2"
  >
    <ul
      className="c3"
      disabled={false}
    />
    <div
      className="c4 c5"
    >
      
      <div
        className="c6"
      >
        <input
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="search"
          value=""
        />
        <i
          className="fa fa-times-circle c7"
        />
      </div>
      <span
        className="c8"
      >
        
      </span>
    </div>
  </div>
</div>
`;

exports[`<Search /> snapshots renders filters 1`] = `
.c7 {
  position: absolute;
  right: 10px;
  visibility: hidden;
  color: hsl(13,100%,40%);
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  margin-top: 8px;
  margin-top: 0px;
}

.c6 input {
  padding-right: 12px;
  padding-left: 12px;
  width: 100%;
  line-height: 36px;
  box-shadow: none;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  border-radius: 2px;
  height: 36px;
  box-sizing: border-box;
}

.c6 input::-webkit-input-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input::-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input:-moz-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input:-ms-input-placeholder {
  color: hsl(0,0%,45%);
}

.c6 input::-webkit-input-placeholder {
  opacity: 1;
}

.c6 input::-moz-placeholder {
  opacity: 1;
}

.c6 input:-moz-placeholder {
  opacity: 1;
}

.c6 input:-ms-input-placeholder {
  opacity: 1;
}

.c6 input:disabled {
  background-color: hsl(0,0%,96%);
}

.c6 input:disabled::-webkit-input-placeholder {
  opacity: 0.5;
}

.c6 input:disabled::-moz-placeholder {
  opacity: 0.5;
}

.c6 input:disabled:-moz-placeholder {
  opacity: 0.5;
}

.c6 input:disabled:-ms-input-placeholder {
  opacity: 0.5;
}

.c8 {
  display: none;
  padding-left: 8px;
  margin-top: 8px;
  font-size: 14px;
  text-align: left;
  color: inherit;
  visibility: hidden;
}

.c5 {
  padding: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 24px;
  padding-left: 12px;
  cursor: pointer;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 24px;
  padding-left: 12px;
  cursor: pointer;
  height: 36px;
  box-sizing: border-box;
  border-radius: 2px;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(0,0%,45%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 .c11 {
  padding: 0;
}

.c12 div:last-child {
  margin-left: auto;
}

.c14 {
  position: absolute;
  right: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c10 {
  height: 36px;
  line-height: 34px;
  position: relative;
  width: 256px;
  box-sizing: border-box;
}

.c3 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  padding: 0 6px 0 10px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  width: 100%;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(240,20%,90%);
  border-radius: 2px;
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 div,
.c0 input {
  border: 0;
}

.c0 .c4,
.c0 .c9 {
  padding: 0;
  margin: 0;
}

.c0 .c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  line-height: 36px;
  border-left: 1px solid hsl(0,0%,80%);
}

.c0 .c9 .dropdown-popover {
  width: auto;
}

.c0 .c4 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  width: 100%;
}

.c0 .c4 input {
  padding: 0 8px;
  width: 100%;
}

.c0 .c4 input:focus {
  outline: none;
}

<div
  className="c0"
>
  <i
    className="fa fa-search c1"
    disabled={false}
  />
  <div
    className="c2"
  >
    <ul
      className="c3"
      disabled={false}
    />
    <div
      className="c4 c5"
    >
      
      <div
        className="c6"
      >
        <input
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="search"
          value=""
        />
        <i
          className="fa fa-times-circle c7"
        />
      </div>
      <span
        className="c8"
      >
        
      </span>
    </div>
  </div>
  <div
    className="c9 c10"
    title="Filters"
  >
    <div
      className="c11 dropdown-toggle c12"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="c11 c13"
        disabled={false}
      >
        Filters
      </div>
      <span
        className="fa fa-caret-down c14"
      />
    </div>
  </div>
</div>
`;
